[package]
# Based on "chat" example from Actix library
name = "remote-sorting-actors"
version = "0.1.0"
authors = ["pbielak"]
edition = "2018"


[[bin]]
name = "supervisor"
path = "src/supervisor.rs"

[[bin]]
name = "sorting_actor"
path = "src/sorting_actor.rs"


[dependencies]
env_logger = "0.6"
log = "0.4"

structopt = "0.2"
time = "0.1"

rand = "0.3"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"

tokio = "0.1"
tokio-codec = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

actix = "0.7"